tests/dataset/tpc-ds/compiler/c/q40.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
static char *sales_date = "2020-01-15";

typedef struct {
  const char *w_state;
  const char *i_item_id;
  double sales_before;
  double sales_after;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int order;
  int item_sk;
  int warehouse_sk;
  int date_sk;
  double price;
} catalog_sale_t;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int order;
  int item_sk;
  double refunded;
} catalog_return_t;
typedef struct {
  int len;
  catalog_return_t *data;
} catalog_return_list_t;
catalog_return_list_t create_catalog_return_list(int len) {
  catalog_return_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_return_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_sk;
  const char *item_id;
  double current_price;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int warehouse_sk;
  const char *state;
} warehouse_t;
typedef struct {
  int len;
  warehouse_t *data;
} warehouse_list_t;
warehouse_list_t create_warehouse_list(int len) {
  warehouse_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(warehouse_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int date_sk;
  const char *date;
} date_dim_t;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *w_state;
  const char *i_item_id;
  const char *sold_date;
  double net;
} records_item_t;
typedef struct {
  int len;
  records_item_t *data;
} records_item_list_t;
records_item_list_t create_records_item_list(int len) {
  records_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(records_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int w_state;
  int i_item_id;
  double sales_before;
  double sales_after;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q40_simplified_result;
static void test_TPCDS_Q40_simplified() {
  tmp1_t tmp1[] = {(tmp1_t){.w_state = "CA",
                            .i_item_id = "I1",
                            .sales_before = 100.0,
                            .sales_after = 0.0}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q40_simplified_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q40_simplified_result.len; i3++) {
      if (test_TPCDS_Q40_simplified_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {(catalog_sale_t){.order = 1,
                                                     .item_sk = 1,
                                                     .warehouse_sk = 1,
                                                     .date_sk = 1,
                                                     .price = 100.0},
                                    (catalog_sale_t){.order = 2,
                                                     .item_sk = 1,
                                                     .warehouse_sk = 1,
                                                     .date_sk = 2,
                                                     .price = 150.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  catalog_return_t catalog_returns[] = {
      (catalog_return_t){.order = 2, .item_sk = 1, .refunded = 150.0}};
  int catalog_returns_len =
      sizeof(catalog_returns) / sizeof(catalog_returns[0]);
  item_t item[] = {
      (item_t){.item_sk = 1, .item_id = "I1", .current_price = 1.2}};
  int item_len = sizeof(item) / sizeof(item[0]);
  warehouse_t warehouse[] = {(warehouse_t){.warehouse_sk = 1, .state = "CA"}};
  int warehouse_len = sizeof(warehouse) / sizeof(warehouse[0]);
  date_dim_t date_dim[] = {(date_dim_t){.date_sk = 1, .date = "2020-01-10"},
                           (date_dim_t){.date_sk = 2, .date = "2020-01-20"}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  records_item_list_t tmp4 =
      records_item_list_t_create(catalog_sales.len * catalog_returns.len *
                                 warehouse.len * item.len * date_dim.len);
  int tmp5 = 0;
  for (int tmp6 = 0; tmp6 < catalog_sales_len; tmp6++) {
    catalog_sale_t cs = catalog_sales[tmp6];
    int tmp8 = 0;
    for (int tmp7 = 0; tmp7 < catalog_returns_len; tmp7++) {
      catalog_return_t cr = catalog_returns[tmp7];
      if (!(cs.order == cr.order && cs.item_sk == cr.item_sk)) {
        continue;
      }
      tmp8 = 1;
      for (int tmp9 = 0; tmp9 < warehouse_len; tmp9++) {
        warehouse_t w = warehouse[tmp9];
        if (!(cs.warehouse_sk == w.warehouse_sk)) {
          continue;
        }
        for (int tmp10 = 0; tmp10 < item_len; tmp10++) {
          item_t i = item[tmp10];
          if (!(cs.item_sk == i.item_sk)) {
            continue;
          }
          for (int tmp11 = 0; tmp11 < date_dim_len; tmp11++) {
            date_dim_t d = date_dim[tmp11];
            if (!(cs.date_sk == d.date_sk)) {
              continue;
            }
            if (!(i.current_price >= 0.99 && i.current_price <= 1.49)) {
              continue;
            }
            tmp4.data[tmp5] = (records_item_t){
                .w_state = w.state,
                .i_item_id = i.item_id,
                .sold_date = d.date,
                .net = cs.price - (((cr == 0) ? 0.0 : cr.refunded))};
            tmp5++;
          }
        }
      }
    }
    if (!tmp8) {
      catalog_return_t cr = (catalog_return_t){0};
      for (int tmp12 = 0; tmp12 < warehouse_len; tmp12++) {
        warehouse_t w = warehouse[tmp12];
        if (!(cs.warehouse_sk == w.warehouse_sk)) {
          continue;
        }
        for (int tmp13 = 0; tmp13 < item_len; tmp13++) {
          item_t i = item[tmp13];
          if (!(cs.item_sk == i.item_sk)) {
            continue;
          }
          for (int tmp14 = 0; tmp14 < date_dim_len; tmp14++) {
            date_dim_t d = date_dim[tmp14];
            if (!(cs.date_sk == d.date_sk)) {
              continue;
            }
            if (!(i.current_price >= 0.99 && i.current_price <= 1.49)) {
              continue;
            }
            tmp4.data[tmp5] = (records_item_t){
                .w_state = w.state,
                .i_item_id = i.item_id,
                .sold_date = d.date,
                .net = cs.price - (((cr == 0) ? 0.0 : cr.refunded))};
            tmp5++;
          }
        }
      }
    }
  }
  tmp4.len = tmp5;
  records_item_list_t records = tmp4;
  result_item_list_t result = (result_item_list_t){0, NULL};
  printf("[");
  for (int i15 = 0; i15 < result.len; i15++) {
    if (i15 > 0)
      printf(",");
    result_item_t it = result.data[i15];
    printf("{");
    _json_string("w_state");
    printf(":");
    _json_int(it.w_state);
    printf(",");
    _json_string("i_item_id");
    printf(":");
    _json_int(it.i_item_id);
    printf(",");
    _json_string("sales_before");
    printf(":");
    _json_float(it.sales_before);
    printf(",");
    _json_string("sales_after");
    printf(":");
    _json_float(it.sales_after);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q40_simplified_result = result;
  test_TPCDS_Q40_simplified();
  return 0;
}
